hero and some gaps corrected

--- a/static/css/event.css
+++ b/static/css/event.css
@@ -2,7 +2,7 @@
 .event {
     background-color: #ffffff;
     border: 1px solid #e0e0e0;
-    padding: 20px;
+    padding: 30px;
     margin-bottom: 30px;
     border-radius: 10px;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
@@ -11,7 +11,7 @@
 
 .event h3 {
     font-size: 24px;
-    margin-bottom: 10px;
+    margin-bottom: 30px;
 }
 
 .event p {
@@ -22,4 +22,8 @@
 .event:hover {
     transform: translateY(-5px);
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.event .cta-button{
+    margin: 20px 20px 0px 0px;
 }
